@@ -107,7 +107,7 @@ class DefaultSecurityCacheTest extends AbstractSecurityTestCase
     private SecurityReference aMissingWikiRef;
 
     @BeforeComponent
-    public void configureCacheManager() throws CacheException
+    void configureCacheManager() throws CacheException
     {
         if (this.cache == null) {
             this.cache = new TestCache<>();
@@ -116,7 +116,7 @@ class DefaultSecurityCacheTest extends AbstractSecurityTestCase
     }
 
     @BeforeEach
-    public void configure() throws Exception
+    void configure()
     {
         when(this.xWikiBridge.getMainWikiReference()).thenReturn(new WikiReference("xwiki"));
         when(this.xWikiBridge.toCompatibleEntityReference(any(EntityReference.class)))
@@ -189,7 +189,7 @@ class DefaultSecurityCacheTest extends AbstractSecurityTestCase
         throws ParentEntryEvictedException, ConflictingInsertionException
     {
         if (groupUserRefs.contains(entry.getReference())) {
-            final List<GroupSecurityReference> groups = new ArrayList<GroupSecurityReference>();
+            final List<GroupSecurityReference> groups = new ArrayList<>();
             for (GroupSecurityReference group : groupRefs.keySet()) {
                 if (groupRefs.get(group).contains(entry.getReference())) {
                     if (group.getOriginalReference().getWikiReference()
@@ -211,7 +211,7 @@ class DefaultSecurityCacheTest extends AbstractSecurityTestCase
         throws ParentEntryEvictedException, ConflictingInsertionException
     {
         if (groupUserRefs.contains(user.getReference())) {
-            final List<GroupSecurityReference> groups = new ArrayList<GroupSecurityReference>();
+            final List<GroupSecurityReference> groups = new ArrayList<>();
             for (GroupSecurityReference group : groupRefs.keySet()) {
                 if (groupRefs.get(group).contains(user.getReference())) {
                     if (group.getOriginalReference().getWikiReference()
@@ -232,7 +232,7 @@ class DefaultSecurityCacheTest extends AbstractSecurityTestCase
     private Map<String, SecurityEntry> InsertUsersWithouShadow()
         throws ConflictingInsertionException, ParentEntryEvictedException
     {
-        Map<String, SecurityEntry> entries = new HashMap<String, SecurityEntry>();
+        Map<String, SecurityEntry> entries = new HashMap<>();
 
         // Add wikis
         for (SecurityReference ref : wikiRefs) {
@@ -307,7 +307,7 @@ class DefaultSecurityCacheTest extends AbstractSecurityTestCase
     private Map<String, SecurityEntry> InsertEntities()
         throws ConflictingInsertionException, ParentEntryEvictedException
     {
-        Map<String, SecurityEntry> entries = new HashMap<String, SecurityEntry>();
+        Map<String, SecurityEntry> entries = new HashMap<>();
 
         for (SecurityReference ref : entityRefs) {
             if (securityCache.get(ref) == null) {
@@ -321,7 +321,7 @@ class DefaultSecurityCacheTest extends AbstractSecurityTestCase
 
     private Map<String, SecurityEntry> InsertAccess() throws ConflictingInsertionException, ParentEntryEvictedException
     {
-        Map<String, SecurityEntry> entries = new HashMap<String, SecurityEntry>();
+        Map<String, SecurityEntry> entries = new HashMap<>();
 
         // Insert access for simple users
         for (UserSecurityReference user : userRefs) {
@@ -559,7 +559,7 @@ class DefaultSecurityCacheTest extends AbstractSecurityTestCase
     @Test
     void testAddSecurityRuleEntry() throws Exception
     {
-        final List<SecurityRuleEntry> ruleEntries = new ArrayList<SecurityRuleEntry>();
+        final List<SecurityRuleEntry> ruleEntries = new ArrayList<>();
 
         // Insert and check insertion individually
         for (SecurityReference ref : entityRefs) {
@@ -609,16 +609,16 @@ class DefaultSecurityCacheTest extends AbstractSecurityTestCase
 
         // Check a non-conflicting duplicate insertion
         try {
-            AddRuleEntry(ruleEntries.get(0));
+            AddRuleEntry(ruleEntries.getFirst());
         } catch (ConflictingInsertionException e) {
             fail("Inserting the same rule entry twice should NOT throw a ConflictingInsertionException.");
         }
 
         // Check a conflicting duplicate insertion
         try {
-            final SecurityReference ref = ruleEntries.get(0).getReference();
+            final SecurityReference ref = ruleEntries.getFirst().getReference();
             SecurityRuleEntry entry =
-                mock(SecurityRuleEntry.class, "Another entry for " + ruleEntries.get(0).getReference().toString());
+                mock(SecurityRuleEntry.class, "Another entry for " + ruleEntries.getFirst().getReference().toString());
             when(entry.getReference()).thenReturn(ref);
 
             AddRuleEntry(entry);
@@ -650,14 +650,14 @@ class DefaultSecurityCacheTest extends AbstractSecurityTestCase
     {
         InsertUsersWithouShadow();
 
-        final List<SecurityShadowEntry> allEntries = new ArrayList<SecurityShadowEntry>();
+        final List<SecurityShadowEntry> allEntries = new ArrayList<>();
 
         // Check inserting shadow users
         for (UserSecurityReference ref : userRefs) {
             if (ref.isGlobal()) {
                 for (SecurityReference wiki : Arrays.asList(wikiRef, anotherWikiRef)) {
                     SecurityShadowEntry entry = mockSecurityShadowEntry(ref, wiki);
-                    assertThat(securityCache.get(AddUserEntry(entry)), sameInstance((SecurityEntry) entry));
+                    assertThat(securityCache.get(AddUserEntry(entry)), sameInstance(entry));
                     allEntries.add(entry);
                 }
             }
@@ -668,7 +668,7 @@ class DefaultSecurityCacheTest extends AbstractSecurityTestCase
             if (ref.isGlobal()) {
                 for (SecurityReference wiki : Arrays.asList(wikiRef, anotherWikiRef)) {
                     SecurityShadowEntry entry = mockSecurityShadowEntry(ref, wiki);
-                    assertThat(securityCache.get(AddUserEntry(entry)), sameInstance((SecurityEntry) entry));
+                    assertThat(securityCache.get(AddUserEntry(entry)), sameInstance(entry));
                     allEntries.add(entry);
                 }
             }
@@ -679,7 +679,7 @@ class DefaultSecurityCacheTest extends AbstractSecurityTestCase
             if (ref.isGlobal()) {
                 for (SecurityReference wiki : Arrays.asList(wikiRef, anotherWikiRef)) {
                     SecurityShadowEntry entry = mockSecurityShadowEntry(ref, wiki);
-                    assertThat(securityCache.get(AddUserEntry(entry)), sameInstance((SecurityEntry) entry));
+                    assertThat(securityCache.get(AddUserEntry(entry)), sameInstance(entry));
                     allEntries.add(entry);
                 }
             }
@@ -717,7 +717,7 @@ class DefaultSecurityCacheTest extends AbstractSecurityTestCase
         InsertUsers();
         InsertEntities();
 
-        final List<SecurityAccessEntry> allEntries = new ArrayList<SecurityAccessEntry>();
+        final List<SecurityAccessEntry> allEntries = new ArrayList<>();
 
         // Insert and check insertion individually for simple users
         for (UserSecurityReference user : userRefs) {
@@ -757,11 +757,11 @@ class DefaultSecurityCacheTest extends AbstractSecurityTestCase
 
         // Check a conflicting duplicate insertion
         try {
-            final SecurityReference ref = allEntries.get(0).getReference();
-            final UserSecurityReference user = allEntries.get(0).getUserReference();
-            SecurityAccessEntry entry =
-                mock(SecurityAccessEntry.class, "Another access for " + allEntries.get(0).getUserReference().toString()
-                    + " on " + allEntries.get(0).getReference().toString());
+            final SecurityReference ref = allEntries.getFirst().getReference();
+            final UserSecurityReference user = allEntries.getFirst().getUserReference();
+            SecurityAccessEntry entry = mock(SecurityAccessEntry.class,
+                "Another access for " + allEntries.getFirst().getUserReference().toString()
+                    + " on " + allEntries.getFirst().getReference().toString());
             when(entry.getUserReference()).thenReturn(user);
             when(entry.getReference()).thenReturn(ref);
 
